force-app/main/default/objects/PTW_Verification_Report__c.object
<CustomObject>
    <fields>
        <fullName>Main_Work_Center_WC__c</fullName>
        <label>Main Work Center WC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Work_Center</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Work_Center__c</fullName>
        <label>Main Work Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Work_Center</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Work_Center_of_Verification__c</fullName>
        <formula>IF( ISBLANK( TEXT( Main_Work_Center__c )) , TEXT(  Main_Work_Center_WC__c  ), TEXT( Main_Work_Center__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Work Center of Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Permit_to_Work__c</fullName>
        <label>Number of Permit to Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Work_Clearance__c</fullName>
        <label>Number of Work Clearance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Permit_to_Work__c</fullName>
        <label>Status of Permit to Work</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Permit_to_Work__c</fullName>
        <label>Type of Permit to Work</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Created_Date__c</fullName>
        <label>WC Created Date</label>
        <type>Date</type>
    </fields>
    <label>PTW Verification Report</label>
    <nameField>
        <label>PTW Verification Report Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>